--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@ h1 {font-weight: bold;}
 
 .content {width: 70%;float:right;margin: 50px 5% 25px 1%;overflow: hidden; text-align: center;}
 	.content p{font-size: 1.3em;}
+	.content span.note{background:rgba(0,0,0,.3);margin-bottom: 10px;padding:2%;display: inline-block;width: 96%;font-size: .9em;}
+	.content .alignRight{text-align: right;}
 #gallery {clear:both;width:100%;height:150px;overflow-x:hidden; overflow-y:hidden; position:relative;}
     #gallery #galleryscroller{position:relative;overflow-x:auto; overflow-y:hidden; white-space: nowrap;background-color: #000000;height:125%;position:relative;clear:both;}
       #galleryscroller div{width:150px;height:150px;display:inline-block;position: relative;}
