--- a/css/style.css
+++ b/css/style.css
@@ -22,21 +22,27 @@ h1 {font-weight: bold;}
 	.menu h3{margin:0px;padding:5px;font-size:1.5em;}
 	.menu a{text-decoration: none;}
 	.menu a .highlight{text-decoration: none;cursor:default;}
+	.menu a.callToAction{margin:0 5px;}
 .panel {background-color:rgba(0,0,0,.4);color:white;border:3px solid gray;width: 100%; margin:25px 0 25px 0;}
 	.panel.pL {border-right:none;border-bottom:none;border-bottom-right-radius:25px;border-bottom-left-radius:10px;border-top-left-radius:10px;}
 	.panel.pC {border-left:none;border-right:none;}
 
 
 
-.content {width: 70%;float:right;margin: 50px 5% 25px 1%;overflow: hidden; text-align: center;}
+.content {width: 70%;float:right;margin: 28px 5% 25px 1%;overflow: hidden; text-align: center;}
 	.content p{font-size: 1.3em;}
-	.content span.note{background:rgba(0,0,0,.3);margin-bottom: 10px;padding:2%;display: inline-block;width: 96%;font-size: .9em;}
+	.content span.note{background:rgba(64,64,64,.3);margin:1% 0;padding:1% 5%;display: inline-block;width: 92%;font-size: .9em;}
 	.content .alignRight{text-align: right;}
-#gallery {clear:both;width:100%;height:150px;overflow-x:hidden; overflow-y:hidden; position:relative;}
+#gallery {clear:both;width:100%;height:150px;overflow-x:hidden; overflow-y:hidden; position:relative;border: 3px solid grey;border-left: none;border-right: none;border-radius: 50px;margin: 20px 0;}
     #gallery #galleryscroller{position:relative;overflow-x:auto; overflow-y:hidden; white-space: nowrap;background-color: #000000;height:125%;position:relative;clear:both;}
-      #galleryscroller div{width:150px;height:150px;display:inline-block;position: relative;}
+      #galleryscroller div{width:150px;height:150px;display:inline-block;position: relative;cursor: -webkit-zoom-in; cursor: -moz-zoom-in;}
       #galleryscroller span.category{-webkit-transform:rotate(-90deg);width:25px;top:-50px;display:inline-block;position: relative;border-left:3px solid gray;padding-left:5px;}
-span.gradient{ background: linear-gradient(to right, rgba(0,0,0,0) , black);width:100px;height:100%;float:right;z-index:5;position: absolute;top: 0px;right: 0px;}
+	#gallery span.gradient{width:125px;height:100%;float:right;z-index:5;position: absolute;top: 0px;cursor:pointer;}
+		#gallery span.gradient:after{content: '+';position: relative;top: 55px;font-size: 2em;font-weight: 600;color: grey;}
+	#gallery span.gradient.left{display:none; background: linear-gradient(to left, rgba(0,0,0,0) , black);left: 0px;}
+		#gallery span.gradient.left:after{left: 25px;}
+	#gallery span.gradient.right{ background: linear-gradient(to right, rgba(0,0,0,0) , black);right:0px;}
+		#gallery span.gradient.right:after{left: 75px;}
 #twitterWidget {float:right;margin:25px 5% 0 0;}
 .horizontalList {border:2px solid #333;border-radius: 20px;margin:25px 5%;width: calc(90% - 350px); text-align: center;float:left;}
 	.horizontalList h3{margin-bottom:0;}
@@ -50,7 +56,10 @@ footer {height:60px;background-color:#222;padding:10px;}
 
 
 
-
+@media only screen and (max-width: 1200px) {
+	
+	.panel.pC a{display:inline-block;}
+}
 @media only screen and (max-width: 1050px) {
 	.panel.pL{width:100%;}
 	.panel.pC{width:90%;margin:25px 5% 25px;}
@@ -64,7 +73,8 @@ footer {height:60px;background-color:#222;padding:10px;}
 	.menu {width: 95%;margin:10px 0 0 3%;overflow:hidden;clear:both;}
 		.menu .panel {width:15%;float:left;margin:5px 2%;}
 			.menu .panel.pC {width:93%;text-align: center;}
-				.panel.pC a:after{content:' James';}
+				.panel.pC a.addJames:after{content:' James';}
+				.panel.pC a.callToAction{display:inline-block;}
 
 	.content {width:90%;margin:10px 5%;}
 }
