--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header img{padding-right: 15px; float:right; width:200px;position: relative;marg
 
 h1 {font-weight: bold;}
 .clearfix {clear:both;overflow: hidden;}
-.callToAction {border-radius: 15px;background-color: #2176D8;padding:15px;margin: 15px;text-decoration:none;color:white;}
+.callToAction {border-radius: 15px;background-color: #2176D8;padding:15px;margin: 15px 0;text-decoration:none;color:white;}
 .callToAction.secondary {border-radius: 10px;background-color: #275D9B;padding:10px;margin: 15px;text-decoration:none;color:white;}
 .highlight {background-color:rgba(255,255,255,.6)!important;color:#000!important;}
 
@@ -35,7 +35,7 @@ h1 {font-weight: bold;}
 	.content .alignRight{text-align: right;}
 #gallery {clear:both;width:100%;height:150px;overflow-x:hidden; overflow-y:hidden; position:relative;border: 3px solid grey;border-left: none;border-right: none;border-radius: 50px;margin: 20px 0;}
     #gallery #galleryscroller{position:relative;overflow-x:auto; overflow-y:hidden; white-space: nowrap;background-color: #000000;height:125%;position:relative;clear:both;}
-      #galleryscroller div{width:150px;height:150px;display:inline-block;position: relative;cursor: -webkit-zoom-in; cursor: -moz-zoom-in;background-repeat:no-repeat;background-position:center center;}
+      #galleryscroller div{background-size:cover;width:150px;height:150px;display:inline-block;position: relative;cursor: -webkit-zoom-in; cursor: -moz-zoom-in;background-repeat:no-repeat;background-position:center center;}
       #galleryscroller div.category{-webkit-transform:rotate(-90deg);width:25px;height:30px;cursor:default;top:-50px;display:inline-block;position: relative;border-left:3px solid gray;padding-left:5px;}
 	#gallery span.gradient{width:125px;height:100%;float:right;z-index:5;position: absolute;top: 0px;cursor:pointer;}
 		#gallery span.gradient:after{content: '+';position: relative;top: 55px;font-size: 2em;font-weight: 600;color: grey;}
@@ -43,7 +43,7 @@ h1 {font-weight: bold;}
 		#gallery span.gradient.left:after{left: 25px;}
 	#gallery span.gradient.right{ background: linear-gradient(to right, rgba(0,0,0,0) , black);right:0px;}
 		#gallery span.gradient.right:after{left: 75px;}
-#twitterWidget {float:right;margin:25px 5% 0 0;}
+#twitterWidget {margin:25px auto;max-width: 520px;}
 .horizontalList {border:2px solid #333;border-radius: 20px;margin:25px 5%;width: calc(90% - 350px); text-align: center;float:left;}
 	.horizontalList h3{margin-bottom:0;}
 	.horizontalList p{margin-top:0;}
@@ -59,6 +59,7 @@ footer {height:60px;background-color:#222;padding:10px;}
 @media only screen and (max-width: 1200px) {
 	
 	.panel.pC a{display:inline-block;}
+	.panel.pC .secondary{margin-top:5px;}
 }
 @media only screen and (max-width: 1050px) {
 	.panel.pL{width:100%;}
