--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ h1 {font-weight: bold;}
 	.content p{font-size: 1.3em;}
 	.content span.note{background:rgba(64,64,64,.3);margin:1% 0;padding:1% 5%;display: inline-block;width: 92%;font-size: .9em;}
 	.content .alignRight{text-align: right;}
+	.content span.secondary{color:grey;}
+	.content b{text-decoration: underline;}
 #gallery {clear:both;width:100%;height:150px;overflow-x:hidden; overflow-y:hidden; position:relative;border: 3px solid grey;border-left: none;border-right: none;border-radius: 50px;margin: 20px 0;}
     #gallery #galleryscroller{position:relative;overflow-x:auto; overflow-y:hidden; white-space: nowrap;background-color: #000000;height:125%;position:relative;clear:both;}
       #galleryscroller div{background-size:cover;width:150px;height:150px;display:inline-block;position: relative;cursor: -webkit-zoom-in; cursor: -moz-zoom-in;background-repeat:no-repeat;background-position:center center;}
