--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 * {font-family: 'Exo 2', sans-serif;font-weight: 200;}
 .sketchFont {font-family: 'Fredericka the Great', cursive;}
 body {color:#eee;background-image:url('../media/road-dark-gradient-black.jpg');background-color:#000;background-size:100% auto;background-repeat: no-repeat;margin:0;}
+a {color:lightskyblue;}
+a:visited{color:cornflowerblue;}
 
 
 header {width: 90%; margin: 25px 5%;padding: 15px 0 50px;text-align: left;color:white;
@@ -13,7 +15,7 @@ header img{padding-right: 15px; float:right; width:200px;position: relative;marg
 h1 {font-weight: bold;}
 .clearfix {clear:both;overflow: hidden;}
 .callToAction {border-radius: 15px;background-color: #2176D8;padding:15px;margin: 15px 0;text-decoration:none;color:white;}
-.callToAction.secondary {border-radius: 10px;background-color: #275D9B;padding:10px;margin: 15px;text-decoration:none;color:white;}
+.callToAction.secondary {background-color: #17549B;padding:10px;margin: 15px;text-decoration:none;color:white;}
 .highlight {background-color:rgba(255,255,255,.6)!important;color:#000!important;}
 
 
@@ -23,6 +25,7 @@ h1 {font-weight: bold;}
 	.menu a{text-decoration: none;}
 	.menu a .highlight{text-decoration: none;cursor:default;}
 	.menu a.callToAction{margin:0 5px;}
+	.menu a.callToAction.secondary{margin:5px 15px;}
 .panel {background-color:rgba(0,0,0,.4);color:white;border:3px solid gray;width: 100%; margin:25px 0 25px 0;}
 	.panel.pL {border-right:none;border-bottom:none;border-bottom-right-radius:25px;border-bottom-left-radius:10px;border-top-left-radius:10px;}
 	.panel.pC {border-left:none;border-right:none;}
@@ -68,6 +71,7 @@ footer {height:60px;background-color:#222;padding:10px;}
 	.panel.pC{width:90%;margin:25px 5% 25px;}
 }
 @media only screen and (max-width: 850px) {
+	.panel.pC .callToAction{margin-bottom:15px;}
 	
 	header {width:100%;margin:0;border-radius:0px;border-top:none;border-left:none;border-right:none;}
 		header img {display: none;}
