--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,13 @@ h1 {font-weight: bold;}
 
 .content {width: 64%;padding:3%;float:right;margin: 28px 5% 25px 1%;overflow: hidden; text-align: left;background:rgba(0,0,0,.4);}
 	.content p{font-size: 1.3em;}
-	.content span.note{background:rgba(64,64,64,.3);margin:1% 0;padding:1% 5%;display: inline-block;width: 92%;font-size: .9em;}
+	.content span.note{background:rgba(64,64,64,.3);margin:1% 0;padding:1% 5%;display: inline-block;width: 90%;font-size: .9em;}
 	.content .alignRight{text-align: right;}
 	.content img {width: 60%;padding:20px 20%;}
 	.content .secondary{color:#bfbfbf;}
 	.content b{text-decoration: underline;}
 	.content .ifSmall {display:none;}
+	.content .contactForm iframe {width:100%;max-width: 333px;}
 #gallery {clear:both;width:100%;height:150px;overflow-x:hidden; overflow-y:hidden; position:relative;border: 3px solid #bfbfbf;border-left: none;border-right: none;border-radius: 50px;margin: 20px 0;}
     #gallery #galleryscroller{position:relative;overflow-x:auto; overflow-y:hidden; white-space: nowrap;background-color: #000000;height:125%;position:relative;clear:both;}
       #galleryscroller div{background-size:cover;width:150px;height:150px;display:inline-block;position: relative;cursor: -webkit-zoom-in; cursor: -moz-zoom-in;background-repeat:no-repeat;background-position:center center;}
@@ -94,8 +95,10 @@ footer {height:60px;background-color:#222;padding:10px;}
 @media only screen and (max-width: 640px) {
 	header div h2 {font-size:1.7em;}
 	header div h3 {font-size:1.5em;}
+	.menu .panel {width: 46%;}
 	.content {font-size:1.3em;}
 	footer {height: 130px;}
-	footer .buttons{float:left;padding:15px;}
+	footer .links{text-align: center;width: 100%;}
+	footer .buttons{padding:15px 0;text-align: center;width:100%;}
 	#twitterWidget {width: 70%;}
 }
