--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,40 @@
 * {font-family: 'Exo 2', sans-serif;font-weight: 200;}
 .sketchFont {font-family: 'Fredericka the Great', cursive;}
 body {color:#eee;background-image:url('../media/road-dark-gradient-black.jpg');background-color:#000;background-size:100% auto;background-repeat: no-repeat;margin:0;}
-a {color:lightskyblue;}
+a {color:#2C79CE;}
 a:visited{color:cornflowerblue;}
 
 
-header {width: 90%; margin: 25px 5%;padding: 15px 0 50px;text-align: left;color:white;
+header {width: 90%; margin: 25px 5%;padding: 15px 0 16px;text-align: left;color:white;
 		background:rgba(13, 5, 21, 0.6) url("../media/grill.png") no-repeat center top;background-size:cover;
 		border-radius: 10px;border:5px solid #111;}
-header div {margin-left: 40px; float:left;z-index:2;width:calc(100% - 300px);}
-header div h2 {font-weight: 400;}
+header .headerWrap {margin-left: 40px; float:left;z-index:2;width:calc(100% - 300px);}
+header .headerWrap h2 {font-weight: 400;}
 header img{padding-right: 15px; float:right; width:200px;position: relative;margin-top:-40px;bottom:-70px;}
 
 h1 {font-weight: bold;}
 .clearfix {clear:both;overflow: hidden;}
-.callToAction {border-radius: 15px;background-color: #2176D8;padding:15px;margin: 15px 0;text-decoration:none;color:white;}
+.callToAction {border-radius: 0px;background-color: #2176D8!important;padding:15px;margin: 15px 0;text-decoration:none;color:white;}
 .callToAction.secondary {background-color: #17549B;padding:10px;margin: 15px;text-decoration:none;color:white;}
-.highlight {background-color:rgba(255,255,255,.6)!important;color:#000!important;}
-
+.highlight{background-color:rgba(255,255,255,.6);color:#000!important;}
+.highlight.panel {border-top: 40px solid rgba(255,255,255,.6)!important;color:#000!important;}
 
 .main {min-height:100%;}
-.menu {margin-left:5%;padding:5px;float:left;width:15%;}
-	.menu h3{margin:0px;padding:5px;font-size:1.5em;}
-	.menu a{text-decoration: none;}
+.menu {padding:5px;float:left;width:100%;}
+	.menu h3{margin:0px;padding:5px;padding-left:8px;font-size:1.5em;bottom:40px;position: relative;}
+	.menu a{text-decoration: none;display: block;float: left;width: 50%;height:43px;margin:0;}
 	.menu a .highlight{text-decoration: none;cursor:default;}
-	.menu a.callToAction{margin:0 5px;}
-	.menu a.callToAction.secondary{margin:5px 15px;}
-.panel {background-color:rgba(0,0,0,.4);color:white;border:3px solid gray;width: 100%; margin:25px 0 25px 0;}
-	.panel.pL {border-right:none;border-bottom:none;border-bottom-right-radius:25px;border-bottom-left-radius:10px;border-top-left-radius:10px;}
+	.menu a .callToAction.secondary{margin:5px 15px;}
+	.menu a:nth-child(2n+2) .panel{margin-right:0;}
+.panel {color:white;margin:5px 0;width:87%;display: inline-block;}
+	.panel.callToAction{border-top: 40px solid rgba(33,118,216,.8)!important;}
+	/*.panel.pL {border-right:none;border-bottom:none;border-bottom-right-radius:25px;border-bottom-left-radius:10px;border-top-left-radius:10px;}*/
+	.panel.pL { border-right: 21px solid transparent;border-top: 40px solid rgba(33,118,216,.4);height:0;padding: 0;border-radius:0;background-color:transparent!important;float:left;}
 	.panel.pC {border-left:none;border-right:none;}
 
 
 
-.content {width: 64%;padding:3%;float:right;margin: 28px 5% 25px 1%;overflow: hidden; text-align: left;background:rgba(0,0,0,.4);}
+.content {width: 80%;padding:5%;margin: 10px 5% 30px;overflow: hidden; text-align: left;background:rgba(0,0,0,.4);}
 	.content p{font-size: 1.3em;}
 	.content span.note{background:rgba(64,64,64,.3);margin:1% 0;padding:1% 5%;display: inline-block;width: 90%;font-size: .9em;}
 	.content .alignRight{text-align: right;}
@@ -41,7 +43,7 @@ h1 {font-weight: bold;}
 	.content b{text-decoration: underline;}
 	.content .ifSmall {display:none;}
 	.content .contactForm iframe {width:100%;max-width: 333px;}
-#gallery {clear:both;width:100%;height:150px;overflow-x:hidden; overflow-y:hidden; position:relative;border: 3px solid #bfbfbf;border-left: none;border-right: none;border-radius: 50px;margin: 20px 0;}
+#gallery {clear:both;width:100%;height:150px;overflow-x:hidden; overflow-y:hidden; position:relative;border: 3px solid #bfbfbf;border-left: none;border-right: none;/*border-radius: 50px;*/margin: 20px 0;}
     #gallery #galleryscroller{position:relative;overflow-x:auto; overflow-y:hidden; white-space: nowrap;background-color: #000000;height:125%;position:relative;clear:both;}
       #galleryscroller div{background-size:cover;width:150px;height:150px;display:inline-block;position: relative;cursor: -webkit-zoom-in; cursor: -moz-zoom-in;background-repeat:no-repeat;background-position:center center;}
       #galleryscroller div.category{-webkit-transform:rotate(-90deg);width:25px;height:30px;cursor:default;top:-50px;display:inline-block;position: relative;border-left:3px solid gray;padding-left:5px;}
@@ -70,7 +72,6 @@ footer {height:60px;background-color:#222;padding:10px;}
 	.panel.pC .secondary{margin-top:5px;}
 }
 @media only screen and (max-width: 1050px) {
-	.panel.pL{width:100%;}
 	.panel.pC{width:90%;margin:25px 5% 25px;}
 }
 @media only screen and (max-width: 850px) {
@@ -80,23 +81,20 @@ footer {height:60px;background-color:#222;padding:10px;}
 	
 	header {width:100%;margin:0;border-radius:0px;border-top:none;border-left:none;border-right:none;}
 		header img {display: none;}
-		header div {width:90%;margin:0 5%;text-align: center;}
+		header .headerWrap {width:90%;margin:0 5%;text-align: center;}
 
-	.menu {width: 90%;margin:0 5%;overflow:hidden;clear:both;padding:15px 0px;}
-		.menu .panel {width:47%;float:left;margin:5px 5% 5px 0%;}
-		.menu a:nth-child(2n+2) .panel{margin-right:0px;}
+	.menu {overflow:hidden;clear:both;padding:15px 0px;}
 			.menu .panel.pC {width:84%;text-align: center}
 				.panel.pC a.addJames:after{content:' James';}
 				.panel.pC a.callToAction{display:inline-block;}
 
-	.content {width:84%;margin:10px 5%;}
+	.content {width:80%;margin:10px 5%;}
 	.ifSmall {display:block;}
 }
 @media only screen and (max-width: 640px) {
-	header div h2 {font-size:1.7em;}
-	header div h3 {font-size:1.5em;}
-	.menu .panel {width: 46%;}
-	.content {font-size:1.3em;}
+	header .headerWrap h2 {font-size:1.7em;}
+	header .headerWrap h3 {font-size:1.5em;}
+	.content {font-size:1.1em;}
 	footer {height: 130px;}
 	footer .links{text-align: center;width: 100%;}
 	footer .buttons{padding:15px 0;text-align: center;width:100%;}
